Fixed tests failing